--- a/dis.html
+++ b/dis.html
@@ -343,15 +343,16 @@ function is_printf_length(c)    { return (c=='h') || (c=='l') || (c=='L') || (c=
     }
   </script>
   
+  Instruction Format: <input type="text" name="archUrl" value="https://api.github.com/repos/hermanhermitage/videocoreiv/contents/videocoreiv.arch?callback=loadArchitecture"/><br />
+  Executable File:    <input type="text" name="binaryUrl" value="https://api.github.com/repos/raspberrypi/firmware/git/blobs/d6bbd12c3becb0517819c5afe138cffb62ad7d95?callback=loadBinary"/>
 
-    
+  <h1>CPU Instruction Decoding Rules</h1>    
   <div id='rules'>
-<textarea rows="2" cols="20">
- (instructions)
-</textarea>
-	</div>
+  </div>
+  <h1>File Disassembly</h1>
   <div id='dump'>
   </div>
+  <h1>Log</h1>
   <div id='log'>
   </div>
   
