--- a/dis.html
+++ b/dis.html
@@ -345,8 +345,8 @@ function is_printf_length(c)    { return (c=='h') || (c=='l') || (c=='L') || (c=
     }
   </script>
   
-  Instruction Format: <input type="text" name="archUrl" value="https://api.github.com/repos/hermanhermitage/videocoreiv/contents/videocoreiv.arch?callback=loadArchitecture"/><br />
-  Executable File:    <input type="text" name="binaryUrl" value="https://api.github.com/repos/raspberrypi/firmware/git/blobs/d6bbd12c3becb0517819c5afe138cffb62ad7d95?callback=loadBinary"/>
+  Instruction: https://api.github.com/repos/ <input type="text" name="archUrl" value="hermanhermitage/videocoreiv/contents/videocoreiv.arch"/><br />
+  Binary:      https://api.github.com/repos/ <input type="text" name="binaryUrl" value="raspberrypi/firmware/contents/boot/bootcode.bin"/>
 
   <h1>CPU Instruction Decoding Rules</h1>    
   <div id='rules'>
