--- a/dis.html
+++ b/dis.html
@@ -345,8 +345,8 @@ function is_printf_length(c)    { return (c=='h') || (c=='l') || (c=='L') || (c=
     }
   </script>
   
-  Instruction: https://api.github.com/repos/ <input type="text" size="40" name="archUrl" value="hermanhermitage/videocoreiv/contents/videocoreiv.arch"/><br />
-  Binary:      https://api.github.com/repos/ <input type="text" size="40" name="binaryUrl" value="raspberrypi/firmware/contents/boot/bootcode.bin"/>
+  Instruction: https://api.github.com/repos/ <input type="text" size="60" name="archUrl" value="hermanhermitage/videocoreiv/contents/videocoreiv.arch"/><br />
+  Binary/Exe:  https://api.github.com/repos/ <input type="text" size="60" name="binaryUrl" value="raspberrypi/firmware/contents/boot/bootcode.bin"/>
 
   <h1>CPU Instruction Decoding Rules</h1>    
   <div id='rules'>
