--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       </header>
       <section>
         <h3>Welcome to VideoCore IV Disassembler.</h3>
-        
+        <a href='dis.html'>Here</a>
     
   </body>
 </html>
