--- a/dis.html
+++ b/dis.html
@@ -361,7 +361,8 @@ function is_printf_length(c)    { return (c=='h') || (c=='l') || (c=='L') || (c=
   <script src='https://api.github.com/repos/hermanhermitage/videocoreiv/contents/videocoreiv.arch?callback=loadArchitecture'>
   </script>
   
-  <script src='https://api.github.com/repos/raspberrypi/firmware/git/blobs/d6bbd12c3becb0517819c5afe138cffb62ad7d95?callback=loadBinary'>
+  <!--<script src='https://api.github.com/repos/raspberrypi/firmware/git/blobs/d6bbd12c3becb0517819c5afe138cffb62ad7d95?callback=loadBinary'>-->
+  <script src='"https://api.github.com/repos/raspberrypi/firmware/contents/boot/loader.bin?callback=loadBinary'>
   </script>
   
 </body>
