--- a/dis.html
+++ b/dis.html
@@ -372,8 +372,8 @@ function is_printf_length(c)    { return (c=='h') || (c=='l') || (c=='L') || (c=
 <b>VideoCore IV Disassembler</b> by <a href='mailto:hermanhermitage@hotmail.com'>Herman Hermitage</a>.<br>
 Please choose a binary to diassemble:
 <ul>
-<li><input type="submit" value="Load from Github" onclick='loadGithubJsonp("raspberrypi/firmware/contents/boot/bootcode.bin", "loadBinary")'/>Either https://api.github.com/repos/ <input type="text" size="60" name="binaryUrl" value="raspberrypi/firmware/contents/boot/bootcode.bin"/></li>
-<li><input value="Local File" type="file" id="input" onchange="handleFiles(this.files)"></li>
+<li><input type="submit" value="Load from Github" onclick='loadGithubJsonp("raspberrypi/firmware/contents/boot/bootcode.bin", "loadBinary")'/> https://api.github.com/repos/ <input type="text" size="60" name="binaryUrl" value="raspberrypi/firmware/contents/boot/bootcode.bin"/></li>
+<li><input value="Local File" type="file" id="input" onchange="handleFiles(this.files)">to load a local file.</li>
 </ul>
 
 <script>
