--- a/dis.html
+++ b/dis.html
@@ -379,16 +379,10 @@ Please choose a binary to diassemble:
 <script>
 </script>
 <div><pre id='file'></pre></div>
-  <b>CPU Instruction Decoding Rules</b>    
-  <div id='rules'>
-  </div>
-  <b>File Disassembly</b>
-  <div>
-  	<textarea id='dump' style='font-family: monospace'></textarea>
-  </div>
-  <h1>Log</h1>
-  <div id='log'>
-  </div>
+  <b>Disassembly</b>
+  <div><textarea id='dump' style='font-family: monospace' rows=24 cols=80></textarea></div>
+  <b>Log</b>    
+  <div id='log'></div>
   
   <script src='https://api.github.com/repos/hermanhermitage/videocoreiv/contents/videocoreiv.arch?callback=loadArchitecture'>
   </script>
