--- a/dis.html
+++ b/dis.html
@@ -370,12 +370,8 @@ function is_printf_length(c)    { return (c=='h') || (c=='l') || (c=='L') || (c=
   Instruction: https://api.github.com/repos/ <input type="text" size="60" name="archUrl" value="hermanhermitage/videocoreiv/contents/videocoreiv.arch"/> or   <input type="file" id="input" onchange="handleFiles(this.files)"> <br/>
   -->
 <b>VideoCore IV Disassembler</b> by <a href='mailto:hermanhermitage@hotmail.com'>Herman Hermitage</a>.<br>
-Please choose a binary to diassemble:
-<ul>
-<li><input type="submit" value="Load from Github" onclick='loadGithubJsonp("raspberrypi/firmware/contents/boot/bootcode.bin", "loadBinary")'/> https://api.github.com/repos/ <input type="text" size="60" name="binaryUrl" value="raspberrypi/firmware/contents/boot/bootcode.bin"/></li>
-<li><input value="Local File" type="file" id="input" onchange="handleFiles(this.files)">to load a local file.</li>
-</ul>
-
+Binary to diassemble:<br>
+<input type="submit" value="Load" onclick='loadGithubJsonp("raspberrypi/firmware/contents/boot/bootcode.bin", "loadBinary")'/> https://api.github.com/repos/ <input type="text" size="60" name="binaryUrl" value="raspberrypi/firmware/contents/boot/bootcode.bin"/>, or <input value="Local File" type="file" id="input" onchange="handleFiles(this.files)">
 <script>
 </script>
 <div><pre id='file'></pre></div>
