--- a/dis.html
+++ b/dis.html
@@ -370,9 +370,9 @@ function is_printf_length(c)    { return (c=='h') || (c=='l') || (c=='L') || (c=
   Instruction: https://api.github.com/repos/ <input type="text" size="60" name="archUrl" value="hermanhermitage/videocoreiv/contents/videocoreiv.arch"/> or   <input type="file" id="input" onchange="handleFiles(this.files)"> <br/>
   -->
 <b>RaspberryPi VideoCore IV Disassembler</b> by <a href='mailto:hermanhermitage@hotmail.com'>Herman Hermitage</a>.<br>
-A simple disassembler for the Broadcom Cpu in the RaspberryPi.
+A simple disassembler for the Broadcom Cpu in the RaspberryPi.<br>
 <br>
-<b>Binary:<br>
+<b>Binary:</b><br>
 <input type="submit" value="Load" onclick='loadGithubJsonp("raspberrypi/firmware/contents/boot/bootcode.bin", "loadBinary")'/> https://api.github.com/repos/ <input type="text" size="60" name="binaryUrl" value="raspberrypi/firmware/contents/boot/bootcode.bin"/>, or <input value="Local File" type="file" id="input" onchange="handleFiles(this.files)">
 <script>
 </script>
