--- a/dis.html
+++ b/dis.html
@@ -373,7 +373,7 @@ function is_printf_length(c)    { return (c=='h') || (c=='l') || (c=='L') || (c=
 A simple disassembler for the Broadcom Cpu in the RaspberryPi.<br>
 <br>
 <b>Binary:</b><br>
-<input type="submit" value="Load" onclick='loadGithubJsonp(document.getElementById("binaryUrl").value, "loadBinary"')/>
+<input type="submit" value="Load" onclick='loadGithubJsonp(document.getElementById("binaryUrl").value, "loadBinary")'/>
  https://api.github.com/repos/
    <select id='binaryUrl'>
      <option value="raspberrypi/firmware/contents/boot/bootcode.bin">raspberrypi/firmware/contents/boot/bootcode.bin</option>
