--- a/dis.html
+++ b/dis.html
@@ -368,7 +368,7 @@ function is_printf_length(c)    { return (c=='h') || (c=='l') || (c=='L') || (c=
     	  'Before you proceed please read and understand the agreement.  By clicking OK below you acknowledge you have read and understood ',
     	  'the agreement.  You also acknowledge that you understand a github API will be used to retrieve a transformed version of the file in non binary form,',
     	  'furthermore you acknowledge you understand that javascript code running on your browser will then further translate the JSONP encoded binary,',
-    	  'into a further modified form.  Furthermore you acknowledge that you understand the RaspberryPi foundation knowingly placed the files on github,'
+    	  'into a further modified form.  Furthermore you acknowledge that you understand the RaspberryPi foundation knowingly placed the files on github,',
     	  'where they would be subject to githubs redistribution terms.'
     	  ];
     	confirm(message.join());
