--- a/dis.html
+++ b/dis.html
@@ -363,15 +363,23 @@ function is_printf_length(c)    { return (c=='h') || (c=='l') || (c=='L') || (c=
   function loadGithubJsonp(fileGithubPath, callbackFunctionName){
     if (fileGithubPath.indexOf('raspberrypi/firmware')==0) {
     	var message = [
-    	  'The file you wish to diassemble is contained in the raspberrypi github repo at https://github.com/raspberrypi.',
-    	  'Since May 10 2012, these have been accompanied by a LICENSE.broadcom file at https://github.com/raspberrypi/firmware/blob/4a16242d6ea7a6e7dc6d5153ee6e05d068fe7df9/boot/LICENCE.broadcom.',
-    	  'Before you proceed please read and understand the agreement.  By clicking OK below you acknowledge you have read and understood ',
-    	  'the agreement.  You also acknowledge that you understand a github API will be used to retrieve a transformed version of the file in non binary form,',
-    	  'furthermore you acknowledge you understand that javascript code running on your browser will then further translate the JSONP encoded binary,',
-    	  'into a further modified form.  Furthermore you acknowledge that you understand the RaspberryPi foundation knowingly placed the files on github,',
-    	  'where they would be subject to githubs redistribution terms.'
+    	  'The file you wish to diassemble is contained in the raspberrypi github repo at '+
+    	  'https://github.com/raspberrypi.',
+    	  'Since May 10 2012, these have been accompanied by a LICENSE.broadcom file at '+
+    	  'https://github.com/raspberrypi/firmware/blob/4a16242d6ea7a6e7dc6d5153ee6e05d068fe7df9/boot/LICENCE.broadcom.',
+    	  'Before you proceed please read and understand the agreement.  By clicking OK '+
+    	  'below you acknowledge you have read and understood the agreement.',
+    	  'You also acknowledge that you understand a Github API will be used to retrieve a transformed version of the file in non binary form,',
+    	  'furthermore you acknowledge you understand that javascript code running in your '+
+    	  'browser will then further translate the JSONP encoded binary into a further modified ("diassembled") form.',
+    	  'Furthermore you acknowledge that you understand the RaspberryPi foundation '+
+    	  'knowingly placed the files on Github, where they would be subject to Github\'s '+
+    	  'redistribution terms and exposure to transform via Github\'s API.'+
+    	  'Finally you acknowledge that yourself, Github and RaspberryPi may be in breach of Broadcom\'s license '+
+    	  'but the author of this program is in no way responsible for your actions and you will personally indemnify '+
+    	  'them from any damages relating to your use of this tool.'
     	  ];
-    	confirm(message.join());
+    	confirm(message.join('\n'));
     }
     loadScript('https://api.github.com/repos/'+fileGithubPath+'?callback='+callbackFunctionName)
   }
