--- a/dis.html
+++ b/dis.html
@@ -368,13 +368,15 @@ function is_printf_length(c)    { return (c=='h') || (c=='l') || (c=='L') || (c=
     	  'Since May 10 2012, these have been accompanied by a LICENSE.broadcom file at '+
     	  'https://github.com/raspberrypi/firmware/blob/master/boot/LICENCE.broadcom.',
     	  'Before you proceed please read and understand the Broadcom license.',
-    	  'You also acknowledge that you understand a Github API will be used to retrieve a '+
+    	  'You acknowledge that you understand a Github API will be used to retrieve a '+
     	  'transformed version of the file in non binary form (JSONP) from the raspberrypi repo.',
     	  'You acknowledge that you understand that javascript code running in your browser will then '+
     	  'translate the JSONP encoded binary into a further modified ("diassembled") form.',
-    	  'Furthermore you acknowledge that you understand the Github user raspberrypi '+
-    	  'knowingly placed the files on Github, where they would be subject to Githubs '+
-    	  'redistribution terms and transformative APIs in the due course of the normal function of Github services.',
+    	  'You acknowledge that you understand the Github user raspberrypi '+
+    	  'placed the files on Github, where they would be subject to Githubs '+
+    	  'redistribution terms and transformative APIs as required for the normal functioning of Github services.',
+    	  'You acknowledge you are not using this tool for any activities relating to "circumvention" (in the DMCA sense), '+
+    	  'but are using it for the purpose of "interoperability".'
     	  'Finally you acknowledge that '+
     	  'the author of this program is in no way responsible for your actions and you will personally indemnify '+
     	  'the author from any and all damages arising from or relating to your use of this tool.',
