--- a/dis.html
+++ b/dis.html
@@ -405,7 +405,10 @@ A simple disassembler for the Broadcom Cpu in the RaspberryPi.<br>
    <select id='binaryUrl'>
      <option value="raspberrypi/firmware/contents/boot/bootcode.bin">raspberrypi/firmware/contents/boot/bootcode.bin</option>
      <option value="raspberrypi/firmware/contents/boot/loader.bin">raspberrypi/firmware/contents/boot/loader.bin</option>
-   </select>
+     <option value="hermanhermitage/videocoreiv/contents/blinker01/blinker01.bin">hermanhermitage/videocoreiv/xontents/blinker01/blinker01.bin</option>
+     <option value="hermanhermitage/videocoreiv/contents/uart01/uart01.bin">hermanhermitage/videocoreiv/contents/master/uart01/uart01.bin</option>
+     <option value="hermanhermitage/videocoreiv/contents/uart02/uart02.bin">hermanhermitage/videocoreiv/contents/master/uart02/uart02.bin</option>
+</select>
    , or <input value="Local File" type="file" id="input" onchange="handleFiles(this.files)">
 <script>
 </script>
