--- a/dis.html
+++ b/dis.html
@@ -397,7 +397,9 @@ function is_printf_length(c)    { return (c=='h') || (c=='l') || (c=='L') || (c=
   Instruction: https://api.github.com/repos/ <input type="text" size="60" name="archUrl" value="hermanhermitage/videocoreiv/contents/videocoreiv.arch"/> or   <input type="file" id="input" onchange="handleFiles(this.files)"> <br/>
   -->
 <b>RaspberryPi VideoCore IV Disassembler</b> by <a href='mailto:hermanhermitage@hotmail.com'>Herman Hermitage</a>.<br>
-A simple disassembler for the Broadcom Cpu in the RaspberryPi.<br>
+A simple disassembler for the Broadcom Cpu in the RaspberryPi (only tested in Google Chrome).<br>
+See <a href='https://github.com/hermanhermitage/videocoreiv'>https://github.com/hermanhermitage/videocoreiv</a> for additional information on the processor.<br>
+
 <br>
 <b>Binary:</b><br>
 <input type="submit" value="Load" onclick='loadGithubJsonp(document.getElementById("binaryUrl").value, "loadBinary")'/>
