--- a/dis.html
+++ b/dis.html
@@ -347,7 +347,7 @@ function is_printf_length(c)    { return (c=='h') || (c=='l') || (c=='L') || (c=
       var reader = new FileReader();
       reader.onload = function(e) {
         var contents = this.result;
-        document.getElementById('dump').innerText = dis(contents).join('\n');
+        document.getElementById('dump').value = dis(contents).join('\n');
       }
       reader.readAsBinaryString(file);
   }
