--- a/dis.html
+++ b/dis.html
@@ -323,7 +323,7 @@ function is_printf_length(c)    { return (c=='h') || (c=='l') || (c=='L') || (c=
       binary = window.atob(jsonp.data.content.replace(/\s/g,''));
       log('Binary file loaded.\n');
       var elem = document.getElementById('dump');
-      elem.innerText = dis(binary).join("\n");  
+      elem.value = dis(binary).join("\n");  
     }
     
     function loadArchitecture(jsonp) {
