--- a/dis.html
+++ b/dis.html
@@ -430,6 +430,7 @@ A simple disassembler for the Broadcom Cpu in the RaspberryPi (only tested in Go
      <option value="hermanhermitage/videocoreiv/contents/uart02/uart02.bin">hermanhermitage/videocoreiv/contents/master/uart02/uart02.bin</option>
      <option value="raspberrypi/firmware/contents/boot/bootcode.bin">raspberrypi/firmware/contents/boot/bootcode.bin</option>
      <option value="raspberrypi/firmware/contents/boot/start_cd.elf">raspberrypi/firmware/contents/boot/start_cd.elf</option>
+     <option value="raspberrypi/firmware/blob/5dd9b4962eb5ae9b9cd9f4a1cbfada360521fee4/boot/start_cd.elf">raspberrypi/firmware/contents/boot/start_cd.elf current tracing</option>
      <!-- <option value="raspberrypi/firmware/contents/boot/loader.bin">raspberrypi/firmware/contents/boot/loader.bin</option> -->
 </select>
    , or <input value="Local File" type="file" id="input" onchange="handleFiles(this.files)">
